--- a/tracking-data-sj/old/index-5.html
+++ b/tracking-data-sj/old/index-5.html
@@ -456,7 +456,7 @@
     </script>
 
     <script type="module">
-      import { utility } from './utility.js';
+      import { utility } from '../assets/utility.js';
       window.u = new utility();
     </script>
 
