--- a/play/d-ai/index.html
+++ b/play/d-ai/index.html
@@ -75,9 +75,9 @@
 </head>
 <body>
 
-  <h1>🧠 Tanya AI (Gemini via Cloudflare Worker)</h1>
+  <h1>🧠 Tanya AI Quy Geis<br>(Gemini via Cloudflare Worker) By Gus Diyar</h1>
 
-  <textarea id="prompt" placeholder="Tanyakan sesuatu ke AI...">Apa perbedaan kopi Arabika dan Robusta?</textarea><br>
+  <textarea id="prompt" placeholder="Tanyakan sesuatu ke AI..."></textarea><br>
   <button onclick="tanyaAI()">Kirim</button>
 
   <div id="output">Jawaban akan muncul di sini...</div>
