--- a/data-data/index.html
+++ b/data-data/index.html
@@ -34,5 +34,6 @@
 
   <body class="bg-gray-100 min-h-screen p-4">
     <div id="app"></div>
+    <script src="assets/view.js"></script>
   </body>
 </html>
