--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="hidden">
 
     <div id="wadah-cari-id" class="p-2 mx-auto">
       <div>
@@ -34,9 +34,9 @@
 
       <div class="p-2 mx-auto">
         <!-- 4 Kolom Responsif -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 gap-4 mb-6">
+        <div class="">
 
-        <div class="flex gap-2">
+        <div class="flex gap-2 mb-2">
           <div class="flex-1">
             <input
               id="cari-helper"
@@ -97,6 +97,7 @@
     <script src="https://cdn.jsdelivr.net/gh/diarmacpro/cdnku@4849b7e3a19e88b14d27454f60d16c062e16648d/core.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/diarmacpro/cdnku@35e5003dbb8177b966f240b861c2bb547fc7f013/firebase-olah-data/f.o.d_v.0.2.js" crossorigin="anonymous"></script>
 
+    <script src="./app.js"></script>
 		<script src="./script.js"></script>
     <script src="./logic.js"></script>
 
