--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -167,7 +167,7 @@
           renderAfterLogin(); // ✅ Load script di sini
         } else {
           console.log("Redirect ke login");
-          window.location.replace("https://example.com");
+          window.location.replace("https://weva.my.id/mutasi-try");
           // location.href = "/login.html"; // jika perlu redirect
         }
       }
