--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -158,45 +158,45 @@
     <!-- Baris 1 -->
     <div class="flex justify-between flex-wrap">
       <span class="font-mono text-blue-600">12:34:56</span>
-      <span>ID: <span class="font-medium">STK1023</span></span>
+      <span>ID: <span class="font-medium">23456</span></span>
       <span>Nama: <span class="font-medium">Barang Contoh</span></span>
     </div>
     <!-- Baris 2 -->
     <div class="flex justify-between flex-wrap text-gray-600 mt-1">
-      <span>Lokasi Awal: <span class="font-semibold">Gudang A</span></span>
-      <span>Lokasi Akhir: <span class="font-semibold">Rak B2</span></span>
+      <span>Lokasi Awal: <span class="font-semibold">307 B</span></span>
+      <span>Lokasi Akhir: <span class="font-semibold">1 X</span></span>
       <span>PIC: <span class="font-semibold">Diar</span></span>
-      <span>Helper: <span class="font-semibold">Andi</span></span>
+      <span>Helper: <span class="font-semibold">Lainya</span></span>
     </div>
   </div>
   <div class="border-b border-gray-200 py-3 text-sm text-gray-700">
     <!-- Baris 1 -->
     <div class="flex justify-between flex-wrap">
       <span class="font-mono text-blue-600">12:34:56</span>
-      <span>ID: <span class="font-medium">STK1023</span></span>
+      <span>ID: <span class="font-medium">12345</span></span>
       <span>Nama: <span class="font-medium">Barang Contoh</span></span>
     </div>
     <!-- Baris 2 -->
     <div class="flex justify-between flex-wrap text-gray-600 mt-1">
-      <span>Lokasi Awal: <span class="font-semibold">Gudang A</span></span>
-      <span>Lokasi Akhir: <span class="font-semibold">Rak B2</span></span>
+      <span>Lokasi Awal: <span class="font-semibold">312 D</span></span>
+      <span>Lokasi Akhir: <span class="font-semibold">1 X</span></span>
       <span>PIC: <span class="font-semibold">Diar</span></span>
-      <span>Helper: <span class="font-semibold">Andi</span></span>
+      <span>Helper: <span class="font-semibold">Lainya</span></span>
     </div>
   </div>
   <div class="border-b border-gray-200 py-3 text-sm text-gray-700">
     <!-- Baris 1 -->
     <div class="flex justify-between flex-wrap">
       <span class="font-mono text-blue-600">12:34:56</span>
-      <span>ID: <span class="font-medium">STK1023</span></span>
+      <span>ID: <span class="font-medium">34567</span></span>
       <span>Nama: <span class="font-medium">Barang Contoh</span></span>
     </div>
     <!-- Baris 2 -->
     <div class="flex justify-between flex-wrap text-gray-600 mt-1">
-      <span>Lokasi Awal: <span class="font-semibold">Gudang A</span></span>
-      <span>Lokasi Akhir: <span class="font-semibold">Rak B2</span></span>
+      <span>Lokasi Awal: <span class="font-semibold">318 G</span></span>
+      <span>Lokasi Akhir: <span class="font-semibold">1 X</span></span>
       <span>PIC: <span class="font-semibold">Diar</span></span>
-      <span>Helper: <span class="font-semibold">Andi</span></span>
+      <span>Helper: <span class="font-semibold">Lainya</span></span>
     </div>
   </div>
 <hr>
@@ -289,7 +289,6 @@
         } else {
           console.log("Redirect ke login");
           window.location.replace("https://weva.my.id/mutasi-try");
-          // location.href = "/login.html"; // jika perlu redirect
         }
       }
     </script>
