--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -29,6 +29,9 @@
 
   </head>
   <body class="hidden">
+    <div id="backdrop" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
+      <div class="text-white text-xl font-semibold">⏳ Menginisialisasi data...</div>
+    </div>
     <!-- ✅ Navbar -->
     <nav class="fixed top-0 left-0 w-full bg-white shadow z-50">
       <div class="max-w-7xl mx-auto px-4 py-2 flex justify-between items-center">
@@ -145,14 +148,22 @@
       </div>
     </div>
 
+
+    <div class="p-2 mx-auto">
+      <div id="notif-container" class="space-y-2 w-full max-w-sm mx-auto"></div>
+        Notifikasi
+      </div>
+    </div>
+
+
 <div class="">
   <!-- Backdrop full screen -->
   <div id="modalBackdrop" class="p-2 fixed inset-0 bg-black bg-opacity-30 flex items-center justify-center z-50 hidden">
     
     <!-- Modal full screen dengan padding -->
-    <div id="modalBox" class="bg-white rounded-2xl shadow-xl w-full h-full p-2 relative transform transition-all duration-300 ease-out flex flex-col">
-      <div class="flex-1 overflow-auto rounded-xl bg-white p-6">
-        <div class="text-gray-800 mb-2"><span class="text-lg font-semibold">List History</span> <span class="text-sm tanggal-real"></span></div>
+    <div id="modalBox" class="bg-white rounded-2xl shadow-xl w-full h-full p-2 relative transform transition-all duration-300 ease-out flex flex-col pt-0">
+      <div class="flex-1 overflow-auto rounded-xl bg-white p-6 pt-0">
+        <div class="text-gray-800 mb-2 pt-6" id="closeModal"><span class="text-lg font-semibold">List History</span> <span class="text-sm tanggal-real"></span></div>
 <hr>
   <div class="border-b border-gray-200 py-3 text-sm text-gray-700">
     <!-- Baris 1 -->
@@ -282,14 +293,6 @@
       </div>
     </div>
   </div>
-
-  
-<hr>
-        <div class="text-right">
-          <button id="closeModal" class="mt-2 px-4 py-2 bg-red-300 hover:bg-red-400 text-white rounded-lg transition">
-            Tutup
-          </button>
-        </div>
       </div>
     </div>
 
@@ -340,6 +343,40 @@
     <script src="./app.js"></script>
 
     <script>
+function showAlert(text = 'Berhasil!', type = 'success') {
+  const container = document.getElementById('notif-container');
+
+  const config = {
+    success: { color: 'green-500', icon: '✅' },
+    error: { color: 'red-500', icon: '❌' },
+    warning: { color: 'yellow-500', icon: '⚠️' },
+    info: { color: 'blue-500', icon: 'ℹ️' },
+  };
+
+  const { color, icon } = config[type] || config.info;
+
+  const notif = document.createElement('div');
+  notif.className = `flex items-center gap-3 bg-${color} text-white px-4 py-2 rounded shadow-md transform transition-all duration-300 opacity-0 translate-x-4`;
+
+  notif.innerHTML = `
+    <div class="text-xl">${icon}</div>
+    <div class="text-sm">${text}</div>
+  `;
+
+  container.appendChild(notif);
+
+  requestAnimationFrame(() => {
+    notif.classList.remove('opacity-0', 'translate-x-4');
+    notif.classList.add('opacity-100', 'translate-x-0');
+  });
+
+  setTimeout(() => {
+    notif.classList.remove('opacity-100', 'translate-x-0');
+    notif.classList.add('opacity-0', 'translate-x-4');
+    setTimeout(() => notif.remove(), 300);
+  }, 3000);
+}
+
       const paramQrl = 'z';
       const login = getFromLocalStorage(paramQrl);
       const qrl = gtQrl(paramQrl);
