--- a/mutasi/etc/template-ui.html
+++ b/mutasi/etc/template-ui.html
@@ -69,3 +69,16 @@
 
 
 		</div>
+
+
+
+
+
+
+  
+<hr>
+        <div class="text-right">
+          <button id="closeModalx" class="mt-2 px-4 py-2 bg-red-300 hover:bg-red-400 text-white rounded-lg transition">
+            Tutup
+          </button>
+        </div>
