--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -71,6 +71,7 @@
       <div>
         <input
           id="cari-id"
+          type="number"
           class="w-full px-1 pt-2 pb-2 bg-white border border-gray-300 rounded-md text-gray-900 text-4xl leading-[1.4] placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200"
           placeholder="ID"
           autocomplete="off"
